Fixed R CMD check issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,5 @@ import(bibtex)
 import(digest)
 import(roxygen2)
 importFrom(digest,digest)
+importFrom(stringr,str_match_all)
+importFrom(stringr,str_trim)
