--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,4 @@ import(roxygen2)
 importFrom(digest,digest)
 importFrom(stringr,str_match_all)
 importFrom(stringr,str_trim)
+importFrom(utils,cite)
