Adapt for roxygen2 >= 7.0.2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,17 @@
 S3method(roclet_clean,roclet_rd2)
 S3method(roclet_output,roclet_rd2)
 S3method(roclet_process,roclet_rd2)
-S3method(roclet_tags,roclet_rd2)
+S3method(roxy_tag_parse,roxy_tag_bibliography)
+S3method(roxy_tag_parse,roxy_tag_cite)
 export(rd2_roclet)
-export(tag_bibliography)
-export(tag_cite)
 import(bibtex)
 import(digest)
 import(roxygen2)
 importFrom(digest,digest)
+importFrom(pkgload,pkg_path)
+importFrom(stats,setNames)
 importFrom(stringr,str_match_all)
 importFrom(stringr,str_trim)
 importFrom(utils,cite)
+importFrom(utils,head)
+importFrom(utils,tail)
