--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: roclets
 Title: Extra Roclets Extending Roxygen2 Capabilities
-Version: 0.0.0.9001
-Authors@R: person("Renaud", "Gaujoux", email = "renaud@tx.technion.ac.il", role = c("aut", "cre"))
+Version: 0.1
+Authors@R: person("Renaud", "Gaujoux", email = "renozao@protonmail.com", role = c("aut", "cre"))
 Description: Define roxygen2 roclets.
 Depends: R (>= 3.3.2)
 License: GPL (>=2)
@@ -9,8 +9,10 @@ Encoding: UTF-8
 LazyData: true
 Imports:
 	utils
-	, roxygen2
+	, roxygen2 (>= 7.0.2)
 	, digest
 	, bibtex
 	, stringr
-RoxygenNote: 6.0.0.9000
+	, pkgload
+RoxygenNote: 7.0.2
+Roxygen: list(markdown = TRUE)
