--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,18 @@
 
 S3method(roclet_clean,roclet_rd2)
 S3method(roclet_output,roclet_rd2)
+S3method(roclet_process,roclet_namespace2)
 S3method(roclet_process,roclet_rd2)
 S3method(roxy_tag_parse,roxy_tag_bibliography)
 S3method(roxy_tag_parse,roxy_tag_cite)
+export(namespace2_roclet)
 export(rd2_roclet)
 import(bibtex)
 import(digest)
 import(roxygen2)
 importFrom(digest,digest)
 importFrom(pkgload,pkg_path)
+importFrom(purrr,map)
 importFrom(stats,setNames)
 importFrom(stringr,str_match_all)
 importFrom(stringr,str_trim)
