Add missing export of roxy_tag_rd.roxy_tag_method_minidesc
This was making the method not being called when using installed version of the package. The result target Rd files would not contain the intended mini-sections

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(roclet_process,roclet_rd2)
 S3method(roxy_tag_parse,roxy_tag_bibliography)
 S3method(roxy_tag_parse,roxy_tag_cite)
 S3method(roxy_tag_parse,roxy_tag_inline)
+S3method(roxy_tag_rd,roxy_tag_method_minidesc)
 export(namespace2_roclet)
 export(rd2_roclet)
 import(bibtex)
