--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ S3method(roxy_tag_parse,roxy_tag_inline)
 S3method(roxy_tag_rd,roxy_tag_method_minidesc)
 export(namespace2_roclet)
 export(rd2_roclet)
-import(bibtex)
 import(digest)
 import(roxygen2)
 importFrom(checkmate,assert_named)
@@ -21,6 +20,8 @@ importFrom(checkmate,assert_subset)
 importFrom(digest,digest)
 importFrom(pkgload,pkg_path)
 importFrom(purrr,map)
+importFrom(rbibutils,readBib)
+importFrom(rbibutils,writeBib)
 importFrom(stats,setNames)
 importFrom(stringr,str_match_all)
 importFrom(stringr,str_trim)
