--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,14 +14,13 @@ export(namespace2_roclet)
 export(rd2_roclet)
 import(digest)
 import(roxygen2)
+importFrom(bibtex,read.bib)
 importFrom(checkmate,assert_named)
 importFrom(checkmate,assert_string)
 importFrom(checkmate,assert_subset)
 importFrom(digest,digest)
 importFrom(pkgload,pkg_path)
 importFrom(purrr,map)
-importFrom(rbibutils,readBib)
-importFrom(rbibutils,writeBib)
 importFrom(stats,setNames)
 importFrom(stringr,str_match_all)
 importFrom(stringr,str_trim)
